# slack-bot-gh-actions

./: .gitignore  README.md  pyproject.toml  send_message.py
.github/workflows/: send_message.yml
