[tool.poetry]
authors = ["yiskw713 <i.yuchi713@gmail.com>"]
description = ""
name = "overtime_request_bot"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.8"
slacker = "^0.14.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.7.0"
flake8 = "^3.8.4"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
